[gd_scene load_steps=4 format=3 uid="uid://b41vh0chb8yry"]

[ext_resource type="Script" uid="uid://dmqfw7yxkfkg4" path="res://Simon/Scripts/game.gd" id="1_7jmmq"]
[ext_resource type="PackedScene" uid="uid://yn1d5or0rw1x" path="res://Simon/Scenes/HexBoard.tscn" id="2_cb7hu"]
[ext_resource type="PackedScene" uid="uid://dtuk3xi0s4h4w" path="res://Simon/Scenes/GameHUD.tscn" id="3_nh1y3"]

[node name="Game" type="Node"]
script = ExtResource("1_7jmmq")

[node name="GameClock" type="Timer" parent="."]

[node name="HexBoard" parent="." instance=ExtResource("2_cb7hu")]
position = Vector2(320, 190)
scale = Vector2(1.25, 1.25)

[node name="GameHUD" parent="." instance=ExtResource("3_nh1y3")]
z_index = 5
offset_bottom = 30.0
